Removes xmx argument and sets global java ipv4 preference